# fay-jquery

./: .gitignore  CHANGELOG.md  README.md  fay-jquery.cabal  test.hs  test.html  test.js
Language/Fay/: JQuery.hs
src/: JQuery.hs
src/Language/Fay/: JQuery.hs
