name:                fay-jquery
version:             0.2.0.0
-- synopsis:
-- description:
homepage:            https://github.com/faylang/fay-jquery
bug-reports:         https://github.com/faylang/fay-jquery/issues
-- license:
--license-file:        LICENSE
author:              Brian Victor
 maintainer:         Brian Victor
-- copyright:
build-type:          Simple
cabal-version:       >=1.8
data-files: src/Language/Fay/JQuery.hs

library
  hs-source-dirs: src
  exposed-modules: Language.Fay.JQuery
  build-depends: fay-base >= 0.14.0.0
