name:                fay-jquery
version:             0.2.0.0
synopsis:            jQuery binding.
description:         jQuery binding.
homepage:            https://github.com/faylang/fay-jquery
bug-reports:         https://github.com/faylang/fay-jquery/issues
license:             BSD3
license-file:        LICENSE
author:              Adam Bergmark, Brian Victor, Chris Done
maintainer:          Chris Done <chrisdone@gmail.com>
copyright:           Adam Bergmark, Brian Victor, Chris Done
build-type:          Simple
cabal-version:       >=1.8
data-files: src/Language/Fay/JQuery.hs

library
  hs-source-dirs: src
  exposed-modules: Language.Fay.JQuery
  build-depends: fay-base >= 0.14.0.0
