name:                fay-jquery
version:             0.6.0.2
synopsis:            jQuery bindings for Fay.
description:         jQuery bindings for Fay.
homepage:            https://github.com/faylang/fay-jquery
bug-reports:         https://github.com/faylang/fay-jquery/issues
license:             BSD3
license-file:        LICENSE
author:              Adam Bergmark, Brian Victor, Chris Done
maintainer:          adam@bergmark.nl
copyright:           Adam Bergmark, Brian Victor, Chris Done
category:            Web, Fay
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:
  README.md
  CHANGELOG.md
data-files: src/JQuery.hs

source-repository head
  type: git
  location: https://github.com/faylang/fay-jquery.git


library
  hs-source-dirs: src
  ghc-options: -Wall
  exposed-modules: JQuery
  build-depends: fay-base >= 0.18
               , fay-text >= 0.2
